@@ -2,6 +2,9 @@ htick 0.9
 ---------
 (released on Mon May 22 14:58:56 CEST 2000)
 
+Tue Jul 11 21:05:00 SAMST 2000
+Georgi:
+* remove description for file[s] (field 'replace' in TIC)
 
 Mon Jun 19 23:45:48 SAMST 2000
 Georgi:
